# vcmi-gym

./: .gitignore  .gitmodules  Makefile  README.md  attention_test.py  cleanrl-mppo-multihead.py  cleanrl-mppo.py  cnntest.py  cnntest2.py  condvar.py  crl-watchdog.zsh  debug-sb3-crl.py  disttest.py  dual_env_test.py  dummy_env.py  enumtest.py  envtest.py  evaluate_crl.py  evaluate_sb3.py  evaluator.py  heatmap.vega.json  histogram.py  inheritance.py  load_features_extractor.py  main.py  mlptest.py  mqrdqn-test.py  myscript.zsh  ppo_trainer_test.py  proctest.py  pyproject.toml  ray-notes.txt  raytest.py  raytune-pb2.py  raytune-pbt.py  raytune.py  requirements-cpu.txt  requirements-cu128.txt  requirements-cu130.txt  requirements-gpu.txt  (+14 more)
config/: benchmark.yml  cleanrl-mppo.yml  crl_train_mppo.yml  env.yml  play.yml  spectate.yml  test.yml  train_mppo.yml  train_mqrdqn.yml  train_ppo.yml  train_qrdqn.yml  train_vppo.yml
debugging/: defend_wrapper.py
doc/: components-connector.puml  components-rl-algos.puml  components-rl-eval-auto.puml  components-rl-eval-single.puml  components-rl-mapgen.puml  components-rl-optimizers.puml  components.puml  connector-details-init.puml  connector-details-render.puml  connector-details-reset-endbattle.puml  connector-details-reset-midbattle.puml  connector-details-step.puml  connector-pov-gym.puml  connector-pov-vcmi.puml  connector-pov.puml  connector-v4-dual-battle-end.puml  connector-v4-dual-battle-start.puml  connector-v4-dual-battle-turn-attacker.puml  connector.md  env_info.md  (+12 more)
vcmi_gym/connectors/: CMakeLists.txt  CMakeUserPresets-vcmigym.json  README  conanfile.py
vcmi_gym/connectors/v1/: common.h  connector.cpp  connector.h  exporter.cpp  exporter.h
vcmi_gym/connectors/v10/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v11/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v12/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v13/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v14/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v15/: .clang-tidy  common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  names.cpp  names.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v2/: connector.cpp  connector.h  exporter.cpp  exporter.h
vcmi_gym/connectors/v3/: common.h  connector.cpp  connector.h  exporter.cpp  exporter.h
vcmi_gym/connectors/v4/: common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v5/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v6/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v7/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v8/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/connectors/v9/: common.cpp  common.h  connector.cpp  exporter.cpp  exporter.h  procconnector.cpp  procconnector.h  threadconnector.cpp  threadconnector.h
vcmi_gym/envs/v0/connector/: CMakeLists.txt  README  TROUBLESHOOT_NOTES.txt  conanfile.py  conncommon.h  connector-diagram.py  connector-int.cpp  connector-multiprocessing.py  connector-serializable.cpp  connector-threading.py  connector-threading2.py  connector.cpp  connector.h  connector.py  connexport.cpp  connload.cpp  connload.h  connload.py  connload_main.cpp  libloader.dylib  loader.cpp  loader.h  loader.py  loader_main.cpp  main.cpp  pyconnector.py  simulate.py  simulate2.py  test.py
vcmi_gym/envs/v0/connector/connector_diagram/: gymenv.py  pyconnector.py
vcmi_gym/envs/v0/connector/cppconnector/: common.h  cppconnector.cpp  cppconnector.h
vcmi_gym/envs/v0/connector/include/: aitypes.h  mmai_export.h  myclient.h  pyclient.h
vcmi_gym/envs/v0/connector/lib/: libmyclient-rel.dylib  libmyclient.dylib  libpyclient-rel.dylib  libpyclient.dylib
vcmi_gym/envs/v0/connector/linktest/proj-a/: CMakeLists.txt  proja.cpp  proja.h
vcmi_gym/envs/v0/connector/linktest/proj-b/: CMakeLists.txt  projb.cpp
vcmi_gym/envs/v0/connector/simulation/: gymenv.py  pyconnector.py  vcmi_env.py
vcmi_gym/envs/v0/connector/simulation/cppconnector/: ai_simulator.cpp  ai_simulator.h  callbacks.h  client_simulator.cpp  client_simulator.h  common.h  connector.cpp  connector.h  main.cpp  server_simulator.cpp  server_simulator.h
vcmi_gym/envs/v0/connector/simulation2/: pyconnector.py
vcmi_gym/envs/v0/connector/simulation2/cppconnector/: ai_simulator.cpp  ai_simulator.h  client_simulator.cpp  client_simulator.h  common.h  connector.cpp  server_simulator.cpp
vcmi_gym/envs/v0/connector/simulation2fix/: pyconnector.py  vcmi_env.py
vcmi_gym/envs/v0/connector/simulation2fix/cppconnector/: ai_simulator.cpp  ai_simulator.h  client_simulator.cpp  client_simulator.h  common.h  connector.cpp  connector.h  server_simulator.cpp  server_simulator.h
vcmi_gym/envs/v0/connector/simulation3/cppconnector/: ai_simulator.cpp  ai_simulator.h  client_simulator.cpp  client_simulator.h  common.h  connector.cpp  server_simulator.cpp  server_simulator.h
vcmi_gym/envs/v0/connector/testing/: common.h  cppconnector.cpp  pyconnector.py  vcmi_env.py
vcmi_gym/envs/v0/connector/testing/cppconnector/: common.h  cppconnector.cpp  main.cpp  main.h
vcmi_gym/envs/v0/connector/v1/: conncommon.h  connector.cpp  connector.h  connexport.cpp
(+692 files in other folders)
